@@ -1,3 +1,8 @@
+Mon Mar 24 14:31:29 2003  George Lebl <jirka@5z.com>
+
+	* src/dict.c, src/eval.c: fix var substitution crash, and add
+	  some memory debug friendliness
+
 Mon Mar 10 13:10:57 2003  George Lebl <jirka@5z.com>
 
 	* lib/number_theory/primes.gel, lib/number_theory/misc.gel:
